# urlpeek

./: .gitattributes  .gitignore  README.md  pyproject.toml
urlpeek/: Application.py  __init__.py  __main__.py
urlpeek/Widget/: LabelEdit.py  Spacer.py  WebView.py
urlpeek/Widget/ToolBar/: BaseToolBar.py  RootToolBar.py  __init__.py
urlpeek/Window/: BaseWindow.py  MainWindow.py  __init__.py
